Curso starter-javascrip-rocketseat_mod1

--- a/Exercicios2/ex006.html
+++ b/Exercicios2/ex006.html
@@ -20,10 +20,10 @@
         <!--<div id="area" onmouseout="sair()", onclick="clicar()", onmousemove="entrar()"-->
         <div id="area">Interaja!</div>
 
-    <script>
+    <script> 
         var area = window.document.getElementById('area');
         area.addEventListener("mouseout", sair)
-        area.addEventListener("mousemove", entrar)
+        area.addEventListener("mouseenter", entrar)
         area.addEventListener("click", clicar)
         area.addEventListener()
 
